--- a/countdowntimer/index.html
+++ b/countdowntimer/index.html
@@ -33,7 +33,7 @@
         </div>
     </div>
     <div class="footer">
-        <p>Open-source project | Available on <a href="https://github.com/bbagchi97"><i class="fab fa-github"></i> Bikramadittya Bagchi</a></p>
+        <p>Open-source project | Available on <a href="https://github.com/bbagchi97/SIT-MCA-BB-Works/tree/main/countdowntimer"><i class="fab fa-github"></i> Bikramadittya Bagchi</a></p>
     </div>
 </body>
 
